@@ -62,6 +62,25 @@ name|message
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|BPServiceActorActionException (String message, Throwable cause)
+specifier|public
+name|BPServiceActorActionException
+parameter_list|(
+name|String
+name|message
+parameter_list|,
+name|Throwable
+name|cause
+parameter_list|)
+block|{
+name|super
+argument_list|(
+name|message
+argument_list|,
+name|cause
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
