@@ -1739,6 +1739,9 @@ Release 2.8.0 - UNRELEASED
 
     HDFS-9528. Cleanup namenode audit/log/exception messages. (szetszwo via umamahesh)
 
+    HDFS-9532. Detailed exception info is lost in reportTo methods of
+    ErrorReportAction and ReportBadBlockAction. (Yongjun Zhang)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
